--- a/src/features/Form/Form.scss
+++ b/src/features/Form/Form.scss
@@ -45,6 +45,26 @@
 
     }
 
+    input {
+        width: 100%;
+        border: none;
+        outline: none;
+        padding: 0.5rem;
+        height: 2.25rem;
+        margin-block-start: 0.25rem;
+        border-radius: var(--br);
+        background-color: var(--frg);
+        color: var(--txt);
+        font-size: var(--fs-300);
+        font-weight: 500;
+    }
+
+    .input__err {
+        color: red;
+        font-size: 0.8em;
+        text-transform: lowercase;
+    }
+
     .form__btns {
         display: flex;
         justify-content: flex-end;
@@ -79,7 +99,7 @@
 
 @media screen and (min-width: 900px) {
     .form {
-        padding: 2rem 2rem 2rem 6rem;
+        padding: 2rem;
         width: 45%;
         border-top-right-radius: 1rem;
         border-bottom-right-radius: 1rem;
@@ -96,5 +116,11 @@
             }
         }
 
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .form {
+        padding: 2rem 2rem 2rem 6rem;
     }
 }
