--- a/src/features/InvoicePage/InvoicePageButtons.scss
+++ b/src/features/InvoicePage/InvoicePageButtons.scss
@@ -7,7 +7,8 @@
         border-radius: 2rem;
         outline: none;
         font-weight: 600;
-        padding: 0.5rem;
+        font-size: var(--fs-400);
+        padding: 0.75rem;
         color: #ffffff;
 
         &:hover {
