--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'open sans', sans-serif;
+    font-family: 'League Spartan', sans-serif;
 }
 
 body {
@@ -9,9 +9,9 @@ body {
 }
 
 :root {
-    --fs-300: 0.8rem;
-    --fs-400: 0.9rem;
-    --fs-500: 1rem;
+    --fs-300: 0.9rem;
+    --fs-400: 1rem;
+    --fs-500: 1.1rem;
     --fs-600: 1.25rem;
     --fs-700: 1.75rem;
     --fs-900: 3rem;
